--- a/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Va-cay/Views/Storyboards/Base.lproj/Main.storyboard
@@ -606,6 +606,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leaves" translatesAutoresizingMaskIntoConstraints="NO" id="D4j-0Q-geE">
+                                <rect key="frame" x="0.0" y="27" width="414" height="896"/>
+                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eEC-Za-Vrv">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <prototypes>
@@ -678,13 +681,13 @@
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="5r5-hU-oQ6" firstAttribute="centerY" secondItem="hfb-v0-2QF" secondAttribute="centerY" id="8f8-xA-njY"/>
                                                 <constraint firstAttribute="trailing" secondItem="5r5-hU-oQ6" secondAttribute="trailing" constant="24" id="oRl-j3-teF"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="sortAZButton" destination="Ryt-fG-8E2" id="249-eU-kD0"/>
                                             <outlet property="sortByButton" destination="ztk-h0-TuK" id="cZP-ic-f6g"/>
@@ -698,12 +701,8 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="334"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paradise" translatesAutoresizingMaskIntoConstraints="NO" id="D4j-0Q-geE">
-                                                    <rect key="frame" x="0.0" y="-102" width="513" height="411"/>
-                                                </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U3F-Wd-edv">
-                                                    <rect key="frame" x="0.0" y="25" width="414" height="284"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <rect key="frame" x="0.0" y="8.5" width="414" height="317"/>
                                                 </view>
                                                 <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="nN1-zn-d8x">
                                                     <rect key="frame" x="41.5" y="33.5" width="331" height="267"/>
@@ -747,6 +746,7 @@
                                                                     </connections>
                                                                 </button>
                                                             </subviews>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qSF-Wf-9qn">
                                                             <rect key="frame" x="0.0" y="44" width="331" height="30"/>
@@ -769,24 +769,22 @@
                                                         </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </stackView>
                                             </subviews>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="U3F-Wd-edv" firstAttribute="height" secondItem="QPu-e8-g1F" secondAttribute="height" multiplier="0.85" id="1zn-le-Nt1"/>
-                                                <constraint firstAttribute="trailing" secondItem="D4j-0Q-geE" secondAttribute="trailing" constant="-99" id="2Mq-rg-gf8"/>
+                                                <constraint firstItem="U3F-Wd-edv" firstAttribute="height" secondItem="QPu-e8-g1F" secondAttribute="height" multiplier="0.95" id="1zn-le-Nt1"/>
                                                 <constraint firstItem="U3F-Wd-edv" firstAttribute="centerY" secondItem="QPu-e8-g1F" secondAttribute="centerY" id="ABh-Ge-NCW"/>
-                                                <constraint firstItem="D4j-0Q-geE" firstAttribute="top" secondItem="QPu-e8-g1F" secondAttribute="top" constant="-102" id="AHc-Lp-HTC"/>
                                                 <constraint firstItem="nN1-zn-d8x" firstAttribute="centerY" secondItem="QPu-e8-g1F" secondAttribute="centerY" id="KUc-aL-rLY"/>
-                                                <constraint firstItem="D4j-0Q-geE" firstAttribute="leading" secondItem="QPu-e8-g1F" secondAttribute="leading" id="Qyy-JT-fy4"/>
                                                 <constraint firstItem="U3F-Wd-edv" firstAttribute="width" secondItem="QPu-e8-g1F" secondAttribute="width" id="Raj-oi-JeP"/>
                                                 <constraint firstItem="nN1-zn-d8x" firstAttribute="width" secondItem="QPu-e8-g1F" secondAttribute="width" multiplier="0.8" id="SL3-ku-Mh1"/>
-                                                <constraint firstAttribute="bottom" secondItem="D4j-0Q-geE" secondAttribute="bottom" constant="25" id="a3l-Ad-yrE"/>
                                                 <constraint firstItem="nN1-zn-d8x" firstAttribute="height" secondItem="QPu-e8-g1F" secondAttribute="height" multiplier="0.8" id="aNJ-u3-7jS"/>
                                                 <constraint firstItem="nN1-zn-d8x" firstAttribute="centerX" secondItem="QPu-e8-g1F" secondAttribute="centerX" id="eRj-rw-okF"/>
                                                 <constraint firstItem="U3F-Wd-edv" firstAttribute="centerX" secondItem="QPu-e8-g1F" secondAttribute="centerX" id="tjt-r1-BPZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="destinationLabel" destination="kkU-tw-SCw" id="4Eb-dQ-s65"/>
                                             <outlet property="itineraryBreakBarView" destination="yt5-Tn-wVH" id="Sen-f6-gLJ"/>
@@ -822,12 +820,16 @@
                         <viewLayoutGuide key="safeArea" id="4yy-J3-xVb"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="D4j-0Q-geE" firstAttribute="centerX" secondItem="4yy-J3-xVb" secondAttribute="centerX" id="7HE-HN-QSQ"/>
                             <constraint firstItem="4yy-J3-xVb" firstAttribute="bottom" secondItem="eEC-Za-Vrv" secondAttribute="bottom" id="A6e-bh-mII"/>
                             <constraint firstItem="az4-YK-P8D" firstAttribute="centerX" secondItem="4yy-J3-xVb" secondAttribute="centerX" id="CFT-R8-1MQ"/>
+                            <constraint firstItem="D4j-0Q-geE" firstAttribute="height" secondItem="GsZ-pb-nUH" secondAttribute="height" id="Fjk-Zk-PPC"/>
                             <constraint firstItem="4yy-J3-xVb" firstAttribute="bottom" secondItem="az4-YK-P8D" secondAttribute="bottom" constant="14" id="KOj-DH-ra9"/>
                             <constraint firstItem="eEC-Za-Vrv" firstAttribute="trailing" secondItem="4yy-J3-xVb" secondAttribute="trailing" id="Q9Y-Af-bsw"/>
+                            <constraint firstItem="D4j-0Q-geE" firstAttribute="centerY" secondItem="4yy-J3-xVb" secondAttribute="centerY" id="RGs-DE-e9c"/>
                             <constraint firstItem="eEC-Za-Vrv" firstAttribute="leading" secondItem="4yy-J3-xVb" secondAttribute="leading" id="b8B-bd-iu2"/>
                             <constraint firstItem="eEC-Za-Vrv" firstAttribute="top" secondItem="4yy-J3-xVb" secondAttribute="top" id="iEW-FT-J3r"/>
+                            <constraint firstItem="D4j-0Q-geE" firstAttribute="width" secondItem="GsZ-pb-nUH" secondAttribute="width" id="ye2-z4-Ik8"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Itineraries" id="CAq-3m-DlV">
@@ -1672,9 +1674,9 @@
         <image name="chevron.down" catalog="system" width="128" height="72"/>
         <image name="earth" width="422.52499389648438" height="422.52499389648438"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
+        <image name="leaves" width="564" height="1000"/>
         <image name="location" catalog="system" width="128" height="121"/>
         <image name="location-pin" width="512" height="512"/>
-        <image name="paradise" width="1000" height="564"/>
         <image name="plus" width="512" height="512"/>
         <image name="square" catalog="system" width="128" height="114"/>
         <namedColor name="AccentColor">
